harness/test/errors/093_monad_missing_marker.eu
# Error: bracket block def with bind/return but no :monad marker
id-bind(ma, f): f(ma)
id-return(a): a

(⟦{}⟧): { bind: id-bind  return: id-return }
